fix modal layout issues on very small screens

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -149,6 +149,8 @@ $modal-left-number-text-color:      $black;
     2.1 Form
 */
 
+$modal-form-section-border-color:                       $nav-item-border-bottom-color;
+$modal-form-section-active-background-color:            hsl(0 0% 90%);
 $modal-form-pledge-label-text-color:                    $moderate-cyan;
 $modal-form-radio-button-border-color:                  hsl(0, 0%, 55%);
 $modal-form-radio-button-focus-visible-outline-color:   $black;
