--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -5,6 +5,7 @@
 .modal {
   position: fixed;
   top: 8rem;
+  padding: 3rem 1.4rem;
   font-size: 1.4rem;
   border-radius: 0.8rem;
   border: none;
